# sqlite-xml

./: .gitignore  Cargo.toml  Makefile  NOTES  README.md  test.sql
.github/workflows/: test.yaml
src/: each.rs  lib.rs  meta.rs  scalar.rs
tests/: test-loadable.py
