[package]
name = "sqlite-xml"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite-loadable = { version = "0.0.6-alpha.2"}
libxml = {git = "https://github.com/asg017/rust-libxml.git", rev = "4bf2d6689a539bc8020cf55d657e8b34ecfd3006", features = ["build-source"]}
serde_json = "1.0.87"

[lib]
crate-type=["lib", "staticlib", "cdylib"]
